zenodo-service/k8/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: zenodo
  annotations:
    getambassador.io/config: |
      ---
      apiVersion: ambassador/v0
      kind: Mapping
      name: zenodo
      prefix: /api/zenodo/
      service: zenodo-service:8080
      rewrite: ""

spec:
  clusterIP: None
  type: ClusterIP
  selector:
    app: zenodo-service
